--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 10/21/2021 06:00<br>
+All books sorted by name - 10/21/2021 22:31<br>
 -----------------------------------------------------<br>
  <br>
 1231 books<br>
@@ -1105,7 +1105,7 @@ The War of the Worlds - H. G. Wells - 5H 56M (Book Reserve - Audiobooks)<br>
 The War on Normal People - Andrew Yang - 6H 56M (Book Reserve - Audiobooks)<br>
 The Weatherman Volume 1 - 6H 13M (Book Reserve - Comic Trades)<br>
 The Wheel of Time 00 - New Spring - 12H 41M (Book Reserve - Audiobooks)<br>
-The Wheel of Time 01 - The Eye of the World - 29H 59M (Queue - Current Audiobooks)<br>
+The Wheel of Time 01 - The Eye of the World - 29H 59M (Completed in 2021)<br>
 The Wheel of Time 02 - The Great Hunt - 26H 35M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 03 - The Dragon Reborn - 24H 48M (Book Reserve - Audiobooks)<br>
 The Wheel of Time 04 - The Shadow Rising - 41H 25M (Book Reserve - Audiobooks)<br>
@@ -1248,9 +1248,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1745H 32M / 72D 17H 32M<br>
+Queue - Current Audiobooks - 137 books - 1715H 32M / 71D 11H 32M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 74 books - 678H 7M / 28D 6H 7M<br>
+Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1269,22 +1269,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2229H 20M / 92D 21H 20M<br>
+168 queued items: 2199H 20M / 91D 15H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 407 titles - 4455H 55M / 185D 15H 55M<br>
-Total remaining in queue and reserve: 824 titles - 10125H 48M / 421D 21H 48M<br>
-Average completed per year: 46.2 titles - 506H 13M / 21D 2H 13M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.1<br>
+Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
+Total remaining in queue and reserve: 823 titles - 10095H 48M / 420D 15H 48M<br>
+Average completed per year: 46.4 titles - 509H 38M / 21D 5H 38M<br>
+Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at current year pace: 8.8<br>
  <br>
-Total time to process all reports: 00:00:01.642 (1.642 seconds)<br>
-Total time including file writes: 00:00:01.642 (1.642 seconds)
+Total time to process all reports: 00:00:03.247 (3.247 seconds)<br>
+Total time including file writes: 00:00:03.247 (3.247 seconds)
 </div>
 </body>
 </html>
