--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 10/21/2021 06:00<br>
+Completed books sorted by length - 10/21/2021 22:31<br>
 -----------------------------------------------------<br>
  <br>
-407 books<br>
+408 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -374,6 +374,7 @@ Kingkiller 1 - The Name of the Wind - Patrick Rothfuss - 27H 54M (Completed in 2
 Elantris 1 - Elantris - Brandon Sanderson - 28H 37M (Completed in 2020)<br>
 The Dark Tower VII - The Dark Tower - 29H 0M (Completed in 2018)<br>
 Mistborn 2 - The Well of Ascension - Brandon Sanderson - 29H 4M (Completed in 2020)<br>
+The Wheel of Time 01 - The Eye of the World - 29H 59M (Completed in 2021)<br>
 The Once and Future King - T. H. White - 33H 0M (Completed in 2020)<br>
 A Song of Ice and Fire 1 - A Game of Thrones - 33H 56M (Completed in 2014)<br>
 A Song of Ice and Fire 4 - A Feast for Crows - 34H 0M (Completed in 2015)<br>
@@ -394,9 +395,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 138 books - 1745H 32M / 72D 17H 32M<br>
+Queue - Current Audiobooks - 137 books - 1715H 32M / 71D 11H 32M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 74 books - 678H 7M / 28D 6H 7M<br>
+Completed in 2021 - 75 books - 708H 7M / 29D 12H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -415,22 +416,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-169 queued items: 2229H 20M / 92D 21H 20M<br>
+168 queued items: 2199H 20M / 91D 15H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.51% of reserve items are queued<br>
+20.41% of reserve items are queued<br>
  <br>
 All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 407 titles - 4455H 55M / 185D 15H 55M<br>
-Total remaining in queue and reserve: 824 titles - 10125H 48M / 421D 21H 48M<br>
-Average completed per year: 46.2 titles - 506H 13M / 21D 2H 13M<br>
-Remaining years of reserve material at average yearly pace: 17.8<br>
-Remaining years of reserve material at current year pace: 9.1<br>
+Total completed since 01/01/2013: 408 titles - 4485H 55M / 186D 21H 55M<br>
+Total remaining in queue and reserve: 823 titles - 10095H 48M / 420D 15H 48M<br>
+Average completed per year: 46.4 titles - 509H 38M / 21D 5H 38M<br>
+Remaining years of reserve material at average yearly pace: 17.7<br>
+Remaining years of reserve material at current year pace: 8.8<br>
  <br>
-Total time to process all reports: 00:00:01.642 (1.642 seconds)<br>
-Total time including file writes: 00:00:01.642 (1.642 seconds)
+Total time to process all reports: 00:00:03.247 (3.247 seconds)<br>
+Total time including file writes: 00:00:03.247 (3.247 seconds)
 </div>
 </body>
 </html>
